# FHGR

./: INFORMATIK.md  INFORMATIK_C++.md  INFORMATIK_C.md  MATHEMATICA.md  README.md
Bildverarbeitung 1/Serie1/: main.cpp  readme.md
Bildverarbeitung 1/Serie10/: readme.md
Bildverarbeitung 1/Serie2/: info.txt  main.cpp
Bildverarbeitung 1/Serie3/: CMakeLists.txt  main.cpp
Bildverarbeitung 2/Serie_01/: CMakeLists.txt  readme.md
Bildverarbeitung 2/Serie_02/: readme.md
Bildverarbeitung 2/Serie_02/FarbbilderUndFarbraumkonvertierungen/: CMakeLists.txt  main.cpp
Bildverarbeitung 2/Serie_03/: readme.md  warpPerspective_demo.cpp
Bildverarbeitung 2/Serie_03/GeometrischeTransformationen/: CMakeLists.txt  main.cpp
Bildverarbeitung 2/Serie_04/: readme.md
Bildverarbeitung 2/Serie_04/ocvImageRegistration/: CMakeLists.txt  main.cpp
Bildverarbeitung 2/Serie_05/: readme.md
Bildverarbeitung 2/Serie_06/: readme.md
Bildverarbeitung 2/Serie_06/Kamera-Kalibration/: CMakeLists.txt  main.cpp
Bildverarbeitung 2/Serie_07/: readme.md
Bildverarbeitung 2/Serie_08/: readme.md
Bildverarbeitung 2/Serie_09/: readme.md
Bildverarbeitung 2/Serie_10/: readme.md
Bildverarbeitung/Eyecatcher/: readme.md
Bildverarbeitung/Serie1/: readme.md
Bildverarbeitung/Serie10/: readme.md
Bildverarbeitung/Serie2/: readme.md  snip1.cpp  snip2.cpp  snip3.cpp
Bildverarbeitung/Serie3/: info.txt  main.cpp  readme.md
Bildverarbeitung/Serie4/: readme.md
Bildverarbeitung/Serie5/: readme.md
etech/: andGatter.slx
informatik/: OVERVIEW.md
linalg/: gleichungssystem.m
matlab/: matlab_template.m
matlab/Anal2/: feld.m  (+10 more)
matlab_function/: physik.md
physik/: S7A9_Feste_Rohrverbindung.m  temp.m
(+171 files in other folders)
